# rentrate

./: LICENSE  README.md  pyproject.toml
calculator/: index.html
data/fixtures/: sample_addresses.json  sample_assessed.json  sample_geo.json  sample_rent.json  sample_sales.json  sample_units.json
landlordshare/: __init__.py  __main__.py  pipeline.py
rentrate/: __init__.py  __main__.py  aggregation.py  pipeline.py  profit.py  profit_pipeline.py
rentshare/: __init__.py  __main__.py  pipeline.py
scripts/: run.sh
tests/: test_aggregation.py  test_pipeline.py  test_profit.py  test_profit_pipeline.py
